--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,9 @@ jobs:
           PULL_REQUEST_BODY: ${{ github.event.pull_request.body }}
         run: |
           echo "PULL_REQUEST_BODY = ${{ env.PULL_REQUEST_BODY }}"
-          echo "youtrack_task_id=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_OUTPUT   
+          echo "youtrack_task_id=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_OUTPUT
+          
+          echo "TASK_IDS=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_ENV  
 
 #--------------------------------------------------------------------
       - name: Get SHARED Pull Requests
@@ -48,7 +50,7 @@ jobs:
         env:
           SHARED_PRS: ${{ steps.get_shared_prs.outputs.data }}
         run: |
-          TASK_IDS=(${TASK_IDS[@]})
+          TASK_IDS=(${env.TASK_IDS[@]})
           for i in "${TASK_IDS[@]}"; do
             tmp=$(echo $SHARED_PRS | jq -r --arg task_id "$i" '[.[] | select(.body!=null and (.body | contains($task_id))) | .number][0]')
             if [[ "$tmp" != "null" ]]; then SHARED_REF="$tmp"; fi
