--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,12 +65,14 @@ jobs:
         env:
           SHARED_PRS: ${{ steps.get_shared_prs.outputs.data }}
         run: |
-          echo "SHARED_PRS = ${{ env.SHARED_PRS }}"
           TASK_IDS=(${TASK_IDS[@]})
           for i in "${TASK_IDS[@]}"; do
             tmp=$(echo $SHARED_PRS | jq -r --arg task_id "$i" '[.[] | select(.body!=null and (.body | contains($task_id))) | .number][0]')
             if [[ "$tmp" != "null" ]]; then SHARED_REF="$tmp"; fi
           done
+          
+          echo "SHARED_REF = ${{ SHARED_REF }}"
+          
           [[ $SHARED_REF ]] && SHARED_REF="refs/pull/${SHARED_REF}/merge" || SHARED_REF="refs/heads/master"
           echo SHARED_REF=$SHARED_REF >> $GITHUB_ENV
           
